fixed vh issue on mobile

--- a/client/src/components/AppContainer/AppContainer.module.scss
+++ b/client/src/components/AppContainer/AppContainer.module.scss
@@ -3,7 +3,6 @@
 .app {
   width: 100vw;
   height: 100vh;
-  height: 100dvh;
   background-color: $scheme-navy-blue;
   display: flex;
   justify-content: center;
